ENH: Added level-set based segmentation filter.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -56,6 +56,7 @@ ADD_TEST(itkOtsuThresholdImageCalculatorTest itkAlgorithmsTests itkOtsuThreshold
 ADD_TEST(itkPatternIntensityImageMetricTest itkAlgorithmsTests  itkPatternIntensityImageMetricTest)
 ADD_TEST(itkRegionGrow2DTest itkAlgorithmsTests itkRegionGrow2DTest)
 ADD_TEST(itkSupervisedImageClassifierTest itkAlgorithmsTests itkSupervisedImageClassifierTest)
+ADD_TEST(itkThresholdSegmentationLevelSetImageFilterTest itkAlgorithmsTests itkThresholdSegmentationLevelSetImageFilterTest)
 ADD_TEST(itkGibbsTest itkAlgorithmsTests itkGibbsTest)
 ADD_TEST(itkDeformableTest itkAlgorithmsTests itkDeformableTest)
 ADD_TEST(itkSphereSourceTest itkAlgorithmsTests itkSphereSourceTest)
@@ -114,6 +115,7 @@ itkOtsuThresholdImageCalculatorTest.cxx
 itkPatternIntensityImageMetricTest.cxx
 itkRegionGrow2DTest.cxx
 itkSupervisedImageClassifierTest.cxx
+itkThresholdSegmentationLevelSetImageFilterTest.cxx
 itkGibbsTest.cxx
 itkDeformableTest.cxx
 itkVectorFuzzyConnectednessImageFilterTest.cxx
