ENH: Improved TARGET_LINK_LIBRARIES to take advantage of library dependency tracking in CMake 1.4.

--- a/Wrapping/Tcl/IO/CMakeLists.txt
+++ b/Wrapping/Tcl/IO/CMakeLists.txt
@@ -13,11 +13,4 @@ ITK_WRAP_TCL(ITKIOTcl
   wrap_itkTkImageViewer2D.cxx
 )
 
-TARGET_LINK_LIBRARIES(ITKIOTcl
-  ITKIO
-  ITKCommon
-  ITKNumerics
-  VXLNumerics
-  ${CABLE_TCL_LIBRARY}
-)
-
+TARGET_LINK_LIBRARIES(ITKIOTcl ITKIO ${CABLE_TCL_LIBRARY})
