ENH: Added CastImageFilter wrappers for US2->F2, F2->F2, US3->F3, and F3->F3.

--- a/Wrapping/Tcl/BasicFilters/CMakeLists.txt
+++ b/Wrapping/Tcl/BasicFilters/CMakeLists.txt
@@ -5,6 +5,7 @@ ADD_LIBRARY(ITKBasicFiltersTcl)
 
 ITK_WRAP_TCL(ITKBasicFiltersTcl
   wrap_ITKBasicFilters.cxx
+  wrap_itkAnisotropicDiffusionImageFilter.cxx
   wrap_itkBinaryThresholdImageFilter.cxx
   wrap_itkCastImageFilter.cxx
   wrap_itkConfidenceConnectedImageFilter.cxx
