--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -20,7 +20,9 @@ ITK_WRAP_TCL(ITKCommonTcl
   wrap_itkFiniteDifferenceImageFilter.cxx
   wrap_itkFixedArray.cxx
   wrap_itkImage.cxx
+  wrap_itkIndex.cxx
   wrap_itkPoint.cxx
+  wrap_itkSize.cxx
   wrap_itkVector.cxx
 )
 
