--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -53,6 +53,8 @@ ADD_TEST(itkJoinImageFilterTest itkBasicFiltersTests itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkBasicFiltersTests itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkBasicFiltersTests itkLogImageFilterAndAdaptorTest)
 ADD_TEST(itkMaskImageFilterTest itkBasicFiltersTests itkMaskImageFilterTest)
+ADD_TEST(itkMaximumImageFilterTest itkBasicFiltersTests itkMaximumImageFilterTest)
+ADD_TEST(itkMinimumImageFilterTest itkBasicFiltersTests itkMinimumImageFilterTest)
 ADD_TEST(itkMeanImageFilterTest itkBasicFiltersTests itkMeanImageFilterTest)
 ADD_TEST(itkMedianImageFilterTest itkBasicFiltersTests itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkBasicFiltersTests itkMultiplyImageFilterTest)
@@ -157,6 +159,8 @@ itkJoinImageFilterTest.cxx
 itkLog10ImageFilterAndAdaptorTest.cxx
 itkLogImageFilterAndAdaptorTest.cxx
 itkMaskImageFilterTest.cxx
+itkMaximumImageFilterTest.cxx
+itkMinimumImageFilterTest.cxx
 itkMeanImageFilterTest.cxx
 itkMedianImageFilterTest.cxx
 itkMultiplyImageFilterTest.cxx
