ENH: Added Bilateral filter test

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -16,6 +16,7 @@ ADD_TEST(itkAtanImageFilterAndAdaptorTest itkBasicFiltersTests itkAtanImageFilte
 ADD_TEST(itkAdaptImageFilterTest itkBasicFiltersTests itkAdaptImageFilterTest)
 ADD_TEST(itkAdaptImageFilterTest2 itkBasicFiltersTests itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicFiltersTests itkBasicArchitectureTest)
+ADD_TEST(itkBilateralImageFilterTest itkBasicFiltersTests itkBilateralImageFilterTest)
 ADD_TEST(itkBinaryDilateImageFilterTest itkBasicFiltersTests itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBasicFiltersTests itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBinaryMedianImageFilterTest itkBasicFiltersTests itkBinaryMedianImageFilterTest)
@@ -123,6 +124,7 @@ itkAtanImageFilterAndAdaptorTest.cxx
 itkAdaptImageFilterTest.cxx
 itkAdaptImageFilterTest2.cxx
 itkBasicArchitectureTest.cxx
+itkBilateralImageFilterTest.cxx
 itkBinaryDilateImageFilterTest.cxx
 itkBinaryMagnitudeImageFilterTest.cxx
 itkBinaryMedianImageFilterTest.cxx
