ENH: OnePlusOneEvolutionaryOptimizer is a part of ITKNumerics library.

--- a/Code/Numerics/CMakeLists.txt
+++ b/Code/Numerics/CMakeLists.txt
@@ -21,6 +21,7 @@ itkRegularStepGradientDescentOptimizer.cxx
 itkSingleValuedNonLinearOptimizer.cxx
 itkSingleValuedNonLinearVnlOptimizer.cxx
 itkVersorTransformOptimizer.cxx
+itkOnePlusOneEvolutionaryOptimizer.cxx
 )
 
 SET(HAS_FEM 0 CACHE INTERNAL "Support for FEM")
