--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -11,6 +11,8 @@ ADD_TEST(itkAdaptImageFilterTest itkBasicFiltersTests itkAdaptImageFilterTest)
 ADD_TEST(itkAdaptImageFilterTest2 itkBasicFiltersTests itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicFiltersTests itkBasicArchitectureTest)
 ADD_TEST(itkBilateralImageFilterTest itkBasicFiltersTests itkBilateralImageFilterTest)
+ADD_TEST(itkBilateralImageFilterTest2 itkBasicFiltersTests itkBilateralImageFilterTest2 ${ITK_DATA_ROOT}/Input/cake_easy.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/BilateralImageFilterTest2.png)
+ADD_TEST(itkBilateralImageFilterTest3 itkBasicFiltersTests itkBilateralImageFilterTest3 ${ITK_DATA_ROOT}/Input/cake_easy.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/BilateralImageFilterTest3.png)
 ADD_TEST(itkBinaryDilateImageFilterTest itkBasicFiltersTests itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBasicFiltersTests itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBinaryMedianImageFilterTest itkBasicFiltersTests itkBinaryMedianImageFilterTest)
@@ -119,6 +121,8 @@ itkAdaptImageFilterTest.cxx
 itkAdaptImageFilterTest2.cxx
 itkBasicArchitectureTest.cxx
 itkBilateralImageFilterTest.cxx
+itkBilateralImageFilterTest2.cxx
+itkBilateralImageFilterTest3.cxx
 itkBinaryDilateImageFilterTest.cxx
 itkBinaryMagnitudeImageFilterTest.cxx
 itkBinaryMedianImageFilterTest.cxx
