--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -87,6 +87,7 @@ ADD_TEST(itkThresholdImageFilterTest itkBasicFiltersTests itkThresholdImageFilte
 ADD_TEST(itkTransformMeshFilterTest itkBasicFiltersTests itkTransformMeshFilterTest)
 ADD_TEST(itkVectorAnisotropicDiffusionImageFilterTest itkBasicFiltersTests itkVectorAnisotropicDiffusionImageFilterTest)
 ADD_TEST(itkGradientAnisotropicDiffusionImageFilterTest itkBasicFiltersTests itkGradientAnisotropicDiffusionImageFilterTest)
+ADD_TEST(itkGradientAnisotropicDiffusionImageFilterTest2 itkBasicFiltersTests itkGradientAnisotropicDiffusionImageFilterTest2 ${ITK_DATA_ROOT}/Input/cake_easy.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/GradientAnisotropicDiffusionImageFilterTest2.png)
 ADD_TEST(itkGradientMagnitudeImageFilterTest itkBasicFiltersTests itkGradientMagnitudeImageFilterTest)
 ADD_TEST(itkGradientImageFilterTest itkBasicFiltersTests itkGradientImageFilterTest)
 ADD_TEST(itkGradientRecursiveGaussianFilterTest itkBasicFiltersTests itkGradientRecursiveGaussianFilterTest)
@@ -197,6 +198,7 @@ itkTransformMeshFilterTest.cxx
 itkTwoOutputExampleImageFilterTest.cxx
 itkVectorAnisotropicDiffusionImageFilterTest.cxx
 itkGradientAnisotropicDiffusionImageFilterTest.cxx
+itkGradientAnisotropicDiffusionImageFilterTest2.cxx
 itkGradientMagnitudeImageFilterTest.cxx
 itkGradientImageFilterTest.cxx
 itkGradientRecursiveGaussianFilterTest.cxx
