ENH: Added ProgressReporter class to help filters report progress.

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -28,6 +28,7 @@ itkObject.cxx
 itkObjectFactoryBase.cxx  
 itkOutputWindow.cxx  
 itkProcessObject.cxx  
+itkProgressReporter.cxx  
 itkQuadraticTriangleCellTopology.cxx
 itkQuadrilateralCellTopology.cxx
 itkRegion.cxx 
