ENH: Added wrappers for ShiftScaleImageFilter and StatisticsImageFilter.

--- a/Wrapping/Tcl/BasicFilters/CMakeLists.txt
+++ b/Wrapping/Tcl/BasicFilters/CMakeLists.txt
@@ -21,6 +21,8 @@ ITK_WRAP_TCL(ITKBasicFiltersTcl
   wrap_itkRecursiveSeparableImageFilter.cxx
   wrap_itkResampleImageFilter.cxx
   wrap_itkRescaleIntensityImageFilter.cxx
+  wrap_itkShiftScaleImageFilter.cxx
+  wrap_itkStatisticsImageFilter.cxx
   wrap_itkSobelEdgeDetectionImageFilter.cxx
   wrap_itkTernaryMagnitudeImageFilter.cxx
 )
