ENH: Added setting of ITKTCL_EXECUTABLE to point at the itktcl executable when ITK_WRAP_TCL is on.

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+IF(ITK_WRAP_TCL)
+  SET(ITKTCL_EXECUTABLE "${ITK_BINARY_DIR}/Wrapping/Tcl/Executable/itktcl")
+ENDIF(ITK_WRAP_TCL)
+
 IF(BUILD_TESTING)
 SUBDIRS( Code )
 ENDIF(BUILD_TESTING)
