--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -131,7 +131,7 @@ ADD_EXECUTABLE(itkAlgorithmsTests itkAlgorithmsTests.cxx ${AlgorithmsTest_SRCS})
 TARGET_LINK_LIBRARIES(itkAlgorithmsTests ITKAlgorithms ITKIO ITKBasicFilters)
 
 
-#IF(ITK_WRAP_TCL)
-#  ADD_TEST(itkCurvatureFlowTestTcl.tcl ${TCL_TCLSH}
-#    ${ITK_SOURCE_DIR}/Testing/Code/Algorithms/itkCurvatureFlowTestTcl.tcl)
-#ENDIF(ITK_WRAP_TCL)
+IF(ITK_WRAP_TCL)
+  ADD_TEST(itkCurvatureFlowTestTcl ${ITKTCL_EXECUTABLE}
+           ${ITK_SOURCE_DIR}/Testing/Code/Algorithms/itkCurvatureFlowTestTcl.tcl)
+ENDIF(ITK_WRAP_TCL)
